<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".fragments.HomeFragment">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextSurname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_surname"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <EditText
            android:id="@+id/editTextMiddleName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_middle_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSurname" />

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_age"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextMiddleName" />

        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_phone_number"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextAge" />

        <EditText
            android:id="@+id/editTextCountry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_country"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhoneNumber" />

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_city"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCountry" />

        <EditText
            android:id="@+id/editTextStreet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_street"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCity" />

        <EditText
            android:id="@+id/editTextSex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_Sex"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextStreet" />

        <EditText
            android:id="@+id/editTextAdditionalInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_additional_information"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSex" />

        <Button
            android:id="@+id/button_catalog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Catalog"
            app:layout_constraintEnd_toStartOf="@+id/button_logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextAdditionalInfo" />

        <Button
            android:id="@+id/button_delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete Account"
            android:backgroundTint="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_logout"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/button_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_catalog"
            app:layout_constraintTop_toBottomOf="@+id/editTextAdditionalInfo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
